--- a/template/review page.html
+++ b/template/review page.html
@@ -21,11 +21,11 @@
             <h1 class=title-review> שתף את ביקורתך:</h1> 
 
             <p class = ratingLabels> הערכה כללית:
-                <i class="my-star star-1" data-star1="1"></i>
-                <i class="my-star star-2" data-star1="2"></i>
-                <i class="my-star star-3" data-star1="3"></i>
-                <i class="my-star star-4" data-star1="4"></i>
-                <i class="my-star star-5" data-star1="5"></i>
+                <i class="my-star1 star1-1" data-star1="1"></i>
+                <i class="my-star1 star1-2" data-star1="2"></i>
+                <i class="my-star1 star1-3" data-star1="3"></i>
+                <i class="my-star1 star1-4" data-star1="4"></i>
+                <i class="my-star1 star1-5" data-star1="5"></i>
             </p>
 
             
@@ -35,21 +35,61 @@
                 
                 
                 <p class = ratingLabels> רמת קושי:
-                <i class="my-star2 star-1" data-star2="1"></i>
-                <i class="my-star2 star-2" data-star2="2"></i>
-                <i class="my-star2 star-3" data-star2="3"></i>
-                <i class="my-star2 star-4" data-star2="4"></i>
-                <i class="my-star2 star-5" data-star2="5"></i>
+                <i class="my-star2 star2-1" data-star2="1"></i>
+                <i class="my-star2 star2-2" data-star2="2"></i>
+                <i class="my-star2 star2-3" data-star2="3"></i>
+                <i class="my-star2 star2-4" data-star2="4"></i>
+                <i class="my-star2 star2-5" data-star2="5"></i>
                 </p>
 
                 <input type="hidden" readonly id="output2">
                 <!--rating is saved as number-->
 
-                <p class = ratingLabels> רמת ארגון החומר:</p>
-                <p class = ratingLabels> מקצועיות המרצה:</p>
-                <p class = ratingLabels> באיזו מידה הקורס תרם לי:</p>
-                <p class = ratingLabels> באיזו מידה הייתי ממליץ לחבר לקחת את הקורס:</p>
-    
+                <p class = ratingLabels> רמת ארגון החומר:
+                    <i class="my-star3 star3-1" data-star3="1"></i>
+                    <i class="my-star3 star3-2" data-star3="2"></i>
+                    <i class="my-star3 star3-3" data-star3="3"></i>
+                    <i class="my-star3 star3-4" data-star3="4"></i>
+                    <i class="my-star3 star3-5" data-star3="5"></i>
+                </p>
+               
+                <input type="hidden" readonly id="output3">
+                <!--rating is saved as number-->
+
+
+                <p class = ratingLabels> מקצועיות המרצה:
+                    <i class="my-star4 star4-1" data-star4="1"></i>
+                    <i class="my-star4 star4-2" data-star4="2"></i>
+                    <i class="my-star4 star4-3" data-star4="3"></i>
+                    <i class="my-star4 star4-4" data-star4="4"></i>
+                    <i class="my-star4 star4-5" data-star4="5"></i>
+                </p>
+                <input type="hidden" readonly id="output4">
+                <!--rating is saved as number-->
+
+
+                <p class = ratingLabels> באיזו מידה הקורס תרם לי:
+                    <i class="my-star5 star5-1" data-star5="1"></i>
+                    <i class="my-star5 star5-2" data-star5="2"></i>
+                    <i class="my-star5 star5-3" data-star5="3"></i>
+                    <i class="my-star5 star5-4" data-star5="4"></i>
+                    <i class="my-star5 star5-5" data-star5="5"></i>
+                </p>
+                <input type="hidden" readonly id="output5">
+                <!--rating is saved as number-->
+
+
+                <p class = ratingLabels> באיזו מידה הייתי ממליץ לחבר לקחת את הקורס:
+                    <i class="my-star6 star6-1" data-star6="1"></i>
+                    <i class="my-star6 star6-2" data-star6="2"></i>
+                    <i class="my-star6 star6-3" data-star6="3"></i>
+                    <i class="my-star6 star6-4" data-star6="4"></i>
+                    <i class="my-star6 star6-5" data-star6="5"></i>
+                </p>
+                <input type="hidden" readonly id="output6">
+                <!--rating is saved as number-->
+
+
                 
          <form action="" method="get">
             <h2 id=PresonalReview>שתף את חוויתך האישית:</h2> 
