--- a/static/style.css
+++ b/static/style.css
@@ -276,7 +276,7 @@ h2.title-Identification{
     width: 65%;
     grid-area: 'ReviewCenter';
     margin-left: 30%;
-    font-size: 60%;
+    font-size: 100%;
     margin-top: 0%;
     font-weight: bold;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
@@ -312,19 +312,18 @@ h1.title-review{
     color: #FFF2E0;
     text-align:center;
     font-weight: bolder;
-    font-size: 120%;
+    font-size: 200%;
     cursor:pointer;
     margin-right: 10%;
     margin-left: 26%;
     font-style: normal;
-    padding: 1%;
-    padding-right: 1.5%;
-    padding-left: 1.5%;
+    padding-right: 1%;
+    padding-left: 1%;
     text-decoration: none;
     background-color: black;
 	font-family: myFont;
     float:left;
-    margin-top: -4.3%;
+    margin-top: -3.5%;
     grid-area: 'ReviewCenter';
 	
 }
@@ -347,17 +346,23 @@ h1.title-review{
 
 
 /*set the default color of the stars*/
-.my-star,.my-star2{
+.star1-rating, .star2-rating, .star3-rating, .star4-rating, .star5-rating, .star6-rating{
+    color: #bebebe;
+    font-size:2em;
+}
+
+/*set the default color of the stars*/
+.my-star1,.my-star2,.my-star3,.my-star4,.my-star5,.my-star6{
     color: #bebebe;
 
 
 }
 /*create the star*/
-.my-star::before,.my-star2::before{
+.my-star1::before,.my-star2::before,.my-star3::before,.my-star4::before,.my-star5::before,.my-star6::before{
     content:"\002605";
 }
 /*remove the default style (italic) of the star*/
-.my-star,.my-star2{
+.my-star1,.my-star2,.my-star3,.my-star4,.my-star5,.my-star6{
     font-style: unset !important;
 }
 /*set active star color*/
@@ -365,7 +370,8 @@ h1.title-review{
     color:#fb8900;
 }
 /*set color on hover*/
-.my-star:not(.is-active):hover,.my-star2:not(.is-active):hover{
+.my-star1:not(.is-active):hover,.my-star2:not(.is-active):hover,.my-star3:not(.is-active):hover,
+.my-star4:not(.is-active):hover,.my-star5:not(.is-active):hover,.my-star6:not(.is-active):hover{
     color: #fb8900;
 }
 
