--- a/public/static/style.css
+++ b/public/static/style.css
@@ -206,7 +206,7 @@ h1.title-Identification{
 
 h2.title-Identification{
     color: black;
-    margin-bottom: 4%; 
+    padding-bottom: 4%;
     grid-area: 'IDPageCenter';
 
 }
@@ -224,9 +224,11 @@ h2.title-Identification{
         border: 5px solid rgb(0, 0, 0);
         border-radius:25%;
         padding-top: 3%;
+        padding-bottom:3%;
 		margin-right: 35%;
 		margin-bottom: 20%;
         grid-area: 'IDPageCenter';
+        font-size:80%;
        
 }
 
