Updated project with local DB

--- a/views/ChooseCoursePage.pug
+++ b/views/ChooseCoursePage.pug
@@ -3,12 +3,13 @@ html(lang="en", dir="rtl")
   head
 
     title Choose Course Page
-    link(rel="stylesheet", href="..//static/style.css")
+    link(rel="stylesheet", href="style.css")
   body
     #ChooseCourseContainer
         header#myHeader
             p
         h1#mainTitle בחר קורס
+        
         h2#title קורסי מחלקת הנדסת תעשייה וניהול
         .flex-container1
             .flex-container1-2
