--- a/views/GoodbyePage.pug
+++ b/views/GoodbyePage.pug
@@ -5,7 +5,7 @@ html(dir="rtl", lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Goodbye Page
-    link(rel="stylesheet", href="..//static/style.css")
+    link(rel="stylesheet", href="style.css")
   body
     #GoodbyeContainer
       header#myHeader
@@ -13,4 +13,4 @@ html(dir="rtl", lang="en")
       #GoodbyeCenter
         h1#GoodbyeTitle הביקורת התקבלה בהצלחה
         p#ThankYouSentence תודה על השתתפותך!
-      img#RightCamel(src="..//static/RightCamel.png")
+      img#RightCamel(src="RightCamel.png")
