--- a/views/IdentificationPage.pug
+++ b/views/IdentificationPage.pug
@@ -2,7 +2,7 @@ doctype html
 html(dir="rtl", lang="en")
   head
     title Identification Page
-    link(rel="stylesheet" ,href="..//static/style.css")
+    link(rel="stylesheet" ,href="style.css")
   body
     #IDPageContainer
       header#myHeader
@@ -10,7 +10,7 @@ html(dir="rtl", lang="en")
       #IDPageCenter
         h1.title-Identification  מסך הזדהות 
         h2.title-Identification אנא מלאו את הפרטים הבאים:
-          form#form(action="/ChooseCoursePage" method="get")
+          form#form(action="/userdetails" method="GET")
             label.label(for="name") שם מלא:       
             input#name(type="text", required)
             br
@@ -26,7 +26,15 @@ html(dir="rtl", lang="en")
                 option(value="שנייה")
                   option(value="שלישית")
                     option(value="רביעית")
-                      br
-                      br
-            
+            br
+            br
+
+            label.label(for="code") קוד כניסה:       
+            input#code(type="text",name = 'code', required)
+            br
+            br
+            .errorMessage #{wrongDevice}
+            .errorMessage #{CodeUsed}
+
             input#IdentificationSubmitButton(type="submit", value="הגש")
+          
