--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: myFont;
-    src: url(..//static/horev/horev/horevclm-heavy-webfont.ttf);
+    src: url(horev/horev/horevclm-heavy-webfont.ttf);
 }
 
 #myHeader {
@@ -47,8 +47,8 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     border: 0.2vw solid black;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 43%;
+    margin-left: 43%;
 }
 
 .clickToVote{
@@ -224,9 +224,8 @@ h2.title-Identification{
         border: 5px solid rgb(0, 0, 0);
         border-radius:25%;
         padding-top: 3%;
-        padding-bottom:3%;
+        padding-bottom:8%;
 		margin-right: 35%;
-		margin-bottom: 20%;
         grid-area: 'IDPageCenter';
         font-size:80%;
        
@@ -262,6 +261,15 @@ h2.title-Identification{
 
 
 /*ReviewPage*/
+
+.Message{
+    font-size: 100%;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    color:rgba(253, 0, 0, 0.71);
+    margin-right: 2.5%;
+    margin-top: 1%;
+}
  
 .informationSection{
     color: rgb(0, 0, 0);
