--- a/views/HomePage.pug
+++ b/views/HomePage.pug
@@ -6,7 +6,7 @@ html(dir="rtl", lang="en")
     //- meta(http-equiv="X-UA-Compatible", content="IE=edge")
     //- meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Home Page
-    link(rel="stylesheet" , href="..//static/style.css")
+    link(rel="stylesheet" , href="style.css")
   body
     #HomePagecontainer
       header#myHeader
@@ -15,10 +15,9 @@ html(dir="rtl", lang="en")
         h1#title המלצות וביקורות על קורסים 
           br
           | לסטודנטים, מסטודנטים
-        p#text מערכת ביקורות נסיונית כלל אוניברסיטאית, 
-          br
-          | פיילוט על קורסי הבחירה של מחלקת הנדסת תעשייה וניהול
-        img#sweetCamel(src="..//static/camel pic.png")
+        p#text גרסת בטא
+          
+        img#sweetCamel(src="camel pic.png")
       #toIdentificationPage
         a(href='/IdentificationPage')
           button.clickToVote כנסו והשפיעו!
