--- a/static/style.css
+++ b/static/style.css
@@ -137,6 +137,7 @@
 	text-align: center;
 	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-weight: bold;
+    color:black;
 }
 
 .course:hover{
@@ -399,7 +400,7 @@ h1.title-review{
     #HomePageCenter{
         text-align: center;
         font-family: myFont;
-        font-size: large;
+        font-size: 100%;
         grid-area:'HomePageCenter';
     }
     
@@ -421,7 +422,7 @@ h1.title-review{
     }
 
     .clickToVote{
-        font-size: 150%;
+        font-size: 120%;
         cursor:pointer;
         margin-left: 20%;
         margin-right: 70%;
@@ -497,7 +498,7 @@ h1.title-review{
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight: bold;
         grid-area: 'flex-container1';
-        
+        color:black;
 	}
 
 
@@ -530,15 +531,8 @@ h1.title-review{
         font-size: 280%;
      }
 
-}
-
-
-
 
 /*Phone ID page*/
-
-@media only screen and (max-width: 900px) {
-
 	#IDPageContainer{
 		display: grid;
 		grid-template-areas:
@@ -602,8 +596,8 @@ h1.title-review{
 
 
 
-
 }
+
 
 
 
