--- a/static/style.css
+++ b/static/style.css
@@ -57,8 +57,8 @@
     text-align:center;
     font-weight: bolder;
     cursor:pointer;
-    margin-left: 20%;
-    margin-right: 70%;
+    margin-left: 30%;
+    margin-right:60%;
     font-style: normal;
     padding: 0.2%;
     padding-top: 1%;
@@ -553,6 +553,7 @@ h1.title-review{
     #ReviewContainter{
 		display: grid;
 		grid-template-areas:
+        'myHeader'
 		'ReviewCenter'
 	}
     
