--- a/static/style.css
+++ b/static/style.css
@@ -23,8 +23,8 @@
 
 #HomePageCenter{
     text-align: center;
-    font-family: myFont;
-	font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: x-large;
     grid-area: 'HomePageCenter';
 }
 
@@ -65,8 +65,8 @@
     padding-bottom: 1%;
     text-decoration: none;
     background-color: black;
-	font-family: myFont;
-	font-size: xx-large;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: x-large;
     grid-area: 'HomePageCenter';
 }
 
@@ -84,15 +84,15 @@
 
 #mainTitle {
 	grid-area: 'mainTitle';
-	font-family: MyFont;
-	font-size: 400%;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 330%;
 }
 
 
 #title {
 	grid-area: 'title';
-	font-family: MyFont;
-	font-size: 280%;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 230%;
 }
 
 .flex-container1,
@@ -161,18 +161,18 @@
 
 #GoodbyeCenter{
 	text-align: center;
-    font-family: myFont;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     grid-area: 'GoodbyeCenter';
 }
 
 #GoodbyeTitle{
-	font-size: 500%;
+	font-size: 400%;
 	padding-bottom: 0%;
     grid-area: 'GoodbyeCenter';
 }
 
 #ThankYouSentence{
-	font-size: 300%;
+	font-size: 200%;
     grid-area: 'GoodbyeCenter';
 }
 
@@ -192,8 +192,8 @@
 
 #IDPageCenter{
     text-align: center;
-    font-family: myFont;
-	font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: x-large;
     grid-area: 'IDPageCenter';
 }
 
@@ -226,7 +226,7 @@ h2.title-Identification{
         padding-bottom:3%;
 		margin-right: 35%;
         grid-area: 'IDPageCenter';
-        font-size:80%;
+        font-size:70%;
        
 }
 
@@ -244,7 +244,7 @@ h2.title-Identification{
     padding-bottom: 2%;
     text-decoration: none;
     background-color: black;
-	font-family: myFont;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-size: 100%;
 	margin-top: 10%;
     grid-area: 'IDPageCenter';
@@ -275,7 +275,7 @@ h2.title-Identification{
     grid-area:'ReviewCenter';
     background-color: white;
     font-size: 200%;
-    font-family: myFont;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
 }
 
@@ -296,10 +296,9 @@ h1.title-review{
     margin-top: 4%; 
     grid-area: 'ReviewCenter';
     right: 0.5%;
-    margin-left: 75%;
     margin-bottom: 0%;
-    font-family: MyFont;
-    font-size: 300%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 280%;
     margin-right: 3%;
 
 }
@@ -307,10 +306,9 @@ h1.title-review{
 #PresonalReview{
     grid-area: 'ReviewCenter';
     right: 0.5%;
-    margin-left: 75%;
     margin-top: 4%;
-    font-family: MyFont;
-    font-size: 250%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 200%;
     margin-right: 3%;
     margin-bottom: 0%;
 }
@@ -320,7 +318,7 @@ h1.title-review{
     color: #FFF2E0;
     text-align:center;
     font-weight: bolder;
-    font-size: 200%;
+    font-size: 180%;
     cursor:pointer;
     margin-right: 10%;
     margin-left: 26%;
@@ -329,7 +327,7 @@ h1.title-review{
     padding-left: 1%;
     text-decoration: none;
     background-color: black;
-	font-family: myFont;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     float:left;
     margin-top: -3.5%;
     grid-area: 'ReviewCenter';
@@ -396,14 +394,14 @@ h1.title-review{
 
     #HomePageCenter{
         text-align: center;
-        font-family: myFont;
-        font-size: 100%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size:80%;
         grid-area:'HomePageCenter';
     }
     
     #sweetCamel{
         width: 40vw;
-        height: 35vw;
+        height: 30vw;
         grid-area:'HomePageCenter';
     }
 
@@ -413,13 +411,13 @@ h1.title-review{
     }
 
     #text{
-        font-size:90%;
+        font-size:100%;
         grid-area:'HomePageCenter';
         font-weight:bold;
     }
 
     .clickToVote{
-        font-size: 150%;
+        font-size: 120%;
         cursor:pointer;
         margin-left: 20%;
         margin-right: 70%;
@@ -429,7 +427,7 @@ h1.title-review{
         padding-bottom: 1%;
         text-decoration: none;
         background-color: black;
-        font-family: myFont;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         grid-area:'HomePageCenter';
     }
 
@@ -443,6 +441,13 @@ h1.title-review{
 
     #ThankYouSentence{
         margin-bottom: 25%;
+        grid-area: 'GoodbyeCenter';
+        font-size: 200%;
+        }
+
+    #GoodbyeTitle{
+        font-size: 350%;
+        padding-bottom: 0%;
         grid-area: 'GoodbyeCenter';
     }
 
@@ -490,7 +495,7 @@ h1.title-review{
         border: 1vw solid #FF914D;
         width: 33vw;
         height:22vw;
-        font-size: 150%;
+        font-size: 200%;
         text-align: center;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight: bold;
@@ -516,7 +521,7 @@ h1.title-review{
 
 
     #mainTitle {
-        font-size: 400%;
+        font-size: 300%;
         margin-bottom: 0%;
         grid-area: 'mainTitle';
     }
@@ -524,8 +529,8 @@ h1.title-review{
 
     #title {
         grid-area: 'title';
-        font-family: MyFont;
-        font-size: 280%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 200%;
      }
 
 
@@ -537,6 +542,10 @@ h1.title-review{
         'IDPageCenter';
 	}
 
+    #IDPageCenter{
+        font-size: 150%;
+    }
+
     #form{
         width: 50%; height: 380px;
         padding-top: 3%;
@@ -545,6 +554,7 @@ h1.title-review{
         text-align: center;
         margin-right: 30%;
         grid-area: 'IDPageCenter';
+        font-size: 70%;
        
     }
 
@@ -562,7 +572,7 @@ h1.title-review{
         color: #FFF2E0;
         text-align:center;
         font-weight: bolder;
-        font-size: 180%;
+        font-size: 150%;
         cursor:pointer;
         margin-right: 10%;
         margin-left: 19%;
@@ -572,7 +582,7 @@ h1.title-review{
         padding-left: 1.5%;
         text-decoration: none;
         background-color: black;
-        font-family: myFont;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         float:left;
         margin-top: -10.5%;
         grid-area: 'ReviewCenter';
@@ -589,6 +599,37 @@ h1.title-review{
         font-weight: bold;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
         margin-right: 2%;
+    }
+
+    .Message{
+        font-size: 110%;
+        font-weight: bold;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+        color:rgba(253, 0, 0, 0.71);
+        margin-right: 2.5%;
+        margin-top: 1%;
+    }
+  
+    h1.title-review{
+        color: black;
+        margin-top: 4%; 
+        grid-area: 'ReviewCenter';
+        right: 0.5%;
+        margin-bottom: 0%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 230%;
+        margin-right: 3%;
+    
+    }
+    
+    #PresonalReview{
+        grid-area: 'ReviewCenter';
+        right: 0.5%;
+        margin-top: 4%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 150%;
+        margin-right: 3%;
+        margin-bottom: 0%;
     }
 
 
