--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@
     text-decoration: none;
     background-color: black;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size: x-large;
+	font-size: large;
     grid-area: 'HomePageCenter';
 }
 
@@ -395,7 +395,7 @@ h1.title-review{
     #HomePageCenter{
         text-align: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size:80%;
+        font-size:120%;
         grid-area:'HomePageCenter';
     }
     
@@ -406,18 +406,18 @@ h1.title-review{
     }
 
     #maintext{
-        font-size: 190%;
+        font-size: 250%;
         grid-area:'HomePageCenter';
     }
 
     #text{
-        font-size:100%;
+        font-size:150%;
         grid-area:'HomePageCenter';
         font-weight:bold;
     }
 
     .clickToVote{
-        font-size: 120%;
+        font-size: 130%;
         cursor:pointer;
         margin-left: 20%;
         margin-right: 70%;
@@ -630,6 +630,10 @@ h1.title-review{
         font-size: 150%;
         margin-right: 3%;
         margin-bottom: 0%;
+    }
+
+    .ratingLabels{
+        font-size:100%;
     }
 
 
