--- a/views/ReviewPage.pug
+++ b/views/ReviewPage.pug
@@ -81,6 +81,8 @@ html(dir="rtl", lang="en")
             br
             br
             br
-            input#submitButtonReview(type="submit", value="הגש")
+            button#submitButtonReview(type = "submit", name = "button1", value = 'finishReviewBut') הגש וסיים
+            a(href='/ReviewPage')
+                button#OneMoreReview(type = "submit", name = "button1", value = 'OneMoreReviewBut') הגש והשאר ביקורת נוספת
           
           div
