--- a/views/HomePage.pug
+++ b/views/HomePage.pug
@@ -25,7 +25,7 @@ html(dir="rtl", lang="en")
             br
             br
             .errorMessage #{wrongDevice}
-            .errorMessage #{CodeUsed}
+            .errorMessage #{InvalidCode}
             input.CodeSubmitButton(type="submit", value="הגש")
 
 
