--- a/views/ReviewPage.pug
+++ b/views/ReviewPage.pug
@@ -75,14 +75,14 @@ html(dir="rtl", lang="en")
             h2#PresonalReview שתף את חוויתך האישית:
             label.label(for="review")
             textarea#review(name="review", placeholder="פרט", maxlength="5000")
-            a(href="..//template/GoodbyePage.html")
+            a(href="/GoodbyePage")
             br
             br
             br
             br
             br
             button#submitButtonReview(type = "submit", name = "button1", value = 'finishReviewBut') הגש וסיים
-            a(href='/ReviewPage')
+            a(href='/ChooseCoursePage')
                 button#OneMoreReview(type = "submit", name = "button1", value = 'OneMoreReviewBut') הגש והשאר ביקורת נוספת
           
           div
