--- a/views/ChooseCoursePage.pug
+++ b/views/ChooseCoursePage.pug
@@ -52,7 +52,7 @@ html(lang="en", dir="rtl")
                 p#CourseText לבחירת קורס שאינו מופיע מעלה:
                 br
                 label.CourseName(for="CourseName") מלא את שם הקורס: 
-                input#CourseNameInput.CourseName(type="text", name = "courseName")
+                input#CourseNameInput.CourseName(type="text", name = "courseNameText")
 
                 #toReviewPage
                     a(href='/ReviewPage')
