--- a/static/style.css
+++ b/static/style.css
@@ -92,6 +92,11 @@
 
 /*Consent Page*/
 
+#myCheckbox{
+    width: 3.5vw;
+    height: 3.5vh;
+}
+
 #ConsentPageCenter{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-size: x-large;
@@ -511,6 +516,50 @@ h1.title-review{
 
 
 @media screen and (max-width: 700px), screen and (max-device-width: 767px) and (orientation: portrait), screen and (max-device-width: 415px) and (orientation: landscape){
+   
+/*Consent Page*/
+
+
+#ConsentPagecontainer {
+    display: grid;
+    grid-template-areas:
+        'myHeader'
+        'ConsentPageCenter'
+        'toHomePage';
+}
+
+#myCheckbox{
+    width: 4vw;
+    height: 4vh;
+}
+
+#ConsentPageCenter,#myCheckboxLabel{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: x-large;
+    grid-area: 'ConsentPageCenter';
+    margin-right: 2%;
+}
+
+#myButton{
+    cursor:pointer;
+    margin-left: 20%;
+    margin-right:70%;
+    font-style: normal;
+    padding: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-decoration: none;
+    background-color: black;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: xx-large;
+    grid-area: 'toHomePage';
+}
+
+   
+   
+   
+   
+   
     /*Phone HomePage page*/
     #HomePagecontainer {
 		display: grid;
@@ -606,6 +655,7 @@ h1.title-review{
 
     .differentCourse{
         grid-area: 'differentCourse';
+        
     }
 
 
@@ -668,9 +718,20 @@ h1.title-review{
     #title {
         grid-area: 'title';
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 200%;
+        font-size: 250%;
      }
 
+    #CourseText{
+        grid-area: 'differentCourse';
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 230%;
+    }
+
+    .CourseName{
+        grid-area: 'differentCourse';
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 200%;
+    }
 
 /*Phone ID page*/
 	#IDPageContainer{
@@ -710,7 +771,7 @@ h1.title-review{
         color: #FFF2E0;
         text-align:center;
         font-weight: bolder;
-        font-size: 150%;
+        font-size: 100%;
         cursor:pointer;
         margin-right: 5%;
         margin-left: 63%;
@@ -732,7 +793,7 @@ h1.title-review{
         color: #FFF2E0;
         text-align:center;
         font-weight: bolder;
-        font-size: 150%;
+        font-size: 100%;
         cursor:pointer;
         margin-right: 20%;
         margin-left: 5%;
