--- a/views/ConsentPage.pug
+++ b/views/ConsentPage.pug
@@ -31,7 +31,7 @@ html(dir="rtl", lang="en")
         
 
         input#myCheckbox(type="checkbox")
-        label.label(for="myCheckbox") הנני מאשר שקראתי את האמור לעיל ונתתי את הסכמתי להשתתפות בהרצה נסיונית של המערכת.
+        label#myCheckboxLabel(for="myCheckbox") הנני מאשר שקראתי את האמור לעיל ונתתי את הסכמתי להשתתפות בהרצה נסיונית של המערכת.
         
         p#ConsentClosePage במידה ואינך מאשר/ת, אנא סגור את הדפדפן. 
      
