--- a/views/ConsentPage.pug
+++ b/views/ConsentPage.pug
@@ -31,9 +31,11 @@ html(dir="rtl", lang="en")
         
 
         input#myCheckbox(type="checkbox")
-        label#myCheckboxLabel(for="myCheckbox") הנני מאשר שקראתי את האמור לעיל ונתתי את הסכמתי להשתתפות בהרצה נסיונית של המערכת.
+        label(for="myCheckbox" ,id =myCheckboxLabel ) הנני מאשר שקראתי את האמור לעיל ונתתי את הסכמתי להשתתפות בהרצה נסיונית של המערכת.
         
         p#ConsentClosePage במידה ואינך מאשר/ת, אנא סגור את הדפדפן. 
+        br
+
      
       #toHomePage
         a(href='/HomePage')
