--- a/views/ConsentPage.pug
+++ b/views/ConsentPage.pug
@@ -17,14 +17,14 @@ html(dir="rtl", lang="en")
           | אנו קבוצת סטודנטים שמקימה אתר ביקורות קורסים באוניברסיטת בן גוריון לסטודנטים מאת סטודנטים. 
           |המערכת נועדה להיות מערכת סטודנטיאלית לדירוגי קורסים.
           br
-          | לפניכם גרסאת בטא (מערכת פיילוט) לסטודנטים במחלקה להנדסת תעשייה וניהול בקורס X.
+          | לפניכם גרסאת בטא (מערכת פיילוט) לסטודנטים במחלקה להנדסת תעשייה וניהול.
           br
           | אנחנו רוצים להריץ את גרסאת הבטא בעזרתכם על ידי איסוף ביקורות על קורסי המחלקה. נודה לכם על השתתפותכם.
           br
           br
-          | כל סטודנט מקורס X שישלים את השתתפותו בהרצה של הפיילוט יקבל נקודת בונוס לציון הסופי של הקורס.
+          | כל סטודנט שישלים את השתתפותו בהרצה של הפיילוט יקבל נקודת בונוס לציון הסופי של הקורס.
           br
-          | חשוב להדגיש כי בכל שלב ניתן לפרוש או לסגת מהשתתפות בהרצה. אף שלב בהשתתפות אינו חובה.
+          | חשוב להדגיש כי בכל שלב ניתן לפרוש או לסגת מהשתתפות בהרצה. אף שלב בהשתתפות אינו חובה,
           br
           | ואולם סטודנט שלא ישלים את השתתפותו לא יזכה בנקודת הבונוס.
 
