--- a/static/style.css
+++ b/static/style.css
@@ -544,7 +544,7 @@ h1.title-review{
 
 #ConsentPagetext,#ConsentClosePage{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size: x-large;
+	font-size: 200%;
     grid-area: 'ConsentPageCenter';
     margin-right: 2%;
 }
