--- a/views/ChooseCoursePage.pug
+++ b/views/ChooseCoursePage.pug
@@ -22,10 +22,10 @@ html(lang="en", dir="rtl")
                 .flex-container1-2
                     .flex-child
                         a(href="/ReviewPage")
-                            input.course(type="submit", name = "courseName" ,value="Web")
+                            input.course(type="submit", name = "courseName" ,value='פתמ"ע')
                     .flex-child
                         a(href="/ReviewPage")
-                            input.course(type="submit", name = "courseName" ,value="BI")
+                            input.course(type="submit", name = "courseName" ,value='חקב"צ 1')
                 .flex-container3-4
                     .flex-child
                         a(href="/ReviewPage")
@@ -37,7 +37,7 @@ html(lang="en", dir="rtl")
                 .flex-container5-6
                     .flex-child
                         a(href="/ReviewPage")
-                            input.course(type="submit",name = "courseName" , value="רגרסיה")
+                            input.course(type="submit",name = "courseName" , value="הסתברות")
                     .flex-child
                         a(href="/ReviewPage")
                             input.course(type="submit", name = "courseName" ,value='תפ"י 1')
